--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
 
       <p *ngIf="display">{{ content }}</p>
       
-      <p *ngFor="let log of logs">{{ log }}</p>
-      <!-- [ngClass]="{blueMode: moreThanFive === true}"> -->
+      <p *ngFor="let log of logs"
+      [ngClass]="{blueMode: moreThanFive == true }">{{ log }}</p>
     </div>
   </div>
 </div>
